--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.15",
+    "next": "15.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -21,6 +21,8 @@
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
