--- a/.prettierrc
+++ b/.prettierrc
@@ -1,15 +1,10 @@
 {
-    "singleQuote": true,
-    "jsxSingleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "all",
-    "plugins": [
-        "prettier-plugin-tailwindcss",
-        "prettier-plugin-organize-imports"
-    ],
-    "tailwindConfig": "./tailwind.config.ts",
-    "tailwindFunctions": [
-        "tw"
-    ],
-    "printWidth": 100
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-organize-imports"],
+  "tailwindConfig": "./tailwind.config.ts",
+  "tailwindFunctions": ["tw"],
+  "printWidth": 100
 }
