--- a/.prettierrc
+++ b/.prettierrc
@@ -3,8 +3,13 @@
   "jsxSingleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
-  "plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-organize-imports"],
+  "plugins": [
+    "prettier-plugin-tailwindcss",
+    "prettier-plugin-organize-imports"
+  ],
   "tailwindConfig": "./tailwind.config.ts",
-  "tailwindFunctions": ["tw"],
+  "tailwindFunctions": [
+    "tw"
+  ],
   "printWidth": 100
 }
